--- a/WebAppExercises/src/main/webapp/studentAdd.html
+++ b/WebAppExercises/src/main/webapp/studentAdd.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Click here to add student</title>
 </head>
 <body>
-
+	<h2> Add student </h2>
+	<form id ="formStudent">
+	<label for = "fid">Id:</label><br>
+	<input type = "text" id="id"><br>
 </body>
 </html>
